# colon

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
doc/: grammar.bnf
include/: ColonAST.h  ColonCompiler.h  ColonLexer.h  ColonParser.h  ColonParserCompliance.h  TokenIterator.h  token-def.h
src/: CMakeLists.txt  ColonCompiler.cpp  ColonParser.cpp  main.cpp
test/: CMakeLists.txt  ColonCompilerTest.h  ColonLexerTest.h  ColonParserTest.h  main.cpp
